--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/js/uikit-icons.min.js"></script>
     <script src="js/optimized.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/optimized.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>PaintingAndDecorating</title>
   </head>
 
@@ -17,7 +17,7 @@
       <div class=tm-page>
         <!-- Navigation -->
         <div class="tm-header-mobile uk-hidden@m">
-          <nav class=uk-navbar-container uk-navbar>
+          <nav class="uk-navbar-container navbar-mobile uk-navbar">
             <div class=uk-navbar-left>
               <a class=uk-navbar-toggle href=#tm-mobile uk-toggle>
                 <div uk-navbar-toggle-icon></div>
@@ -48,11 +48,13 @@
         </div>
         <div class="tm-header uk-visible@m" uk-header>
           <div uk-sticky media=@m show-on-up animation=uk-animation-slide-top cls-active=uk-navbar-sticky sel-target=.uk-navbar-container>
-            <div class=uk-navbar-container>
-              <div class=uk-container>
+            <div class="uk-navbar-container uk-box-shadow-medium">
+              <div class="uk-container">
                 <nav class=uk-navbar uk-navbar={&quot;align&quot;:&quot;left&quot;,&quot;boundary&quot;:&quot;!.uk-navbar-container&quot;,&quot;dropbar&quot;:true,&quot;dropbar-anchor&quot;:&quot;!.uk-navbar-container&quot;,&quot;dropbar-mode&quot;:&quot;push&quot;}>
                   <div class=uk-navbar-left>
-                    <a href=https://malujemypoznan.com.pl class="uk-navbar-item uk-logo"> <img src=/templates/yootheme/cache/ap-9bb0bffd.png srcset="/templates/yootheme/cache/ap-9bb0bffd.png 80w, /templates/yootheme/cache/ap-c6b7a4a5.png 160w" sizes="(min-width: 80px) 80px" data-width=4252 data-height=4176 alt="AP INVEST"></a>
+                    <a href=https://malujemypoznan.com.pl class="uk-navbar-item uk-logo">
+                      <img src=/templates/yootheme/cache/ap-9bb0bffd.png srcset="/templates/yootheme/cache/ap-9bb0bffd.png 80w, /templates/yootheme/cache/ap-c6b7a4a5.png 160w" sizes="(min-width: 80px) 80px" data-width=4252 data-height=4176 alt="AP INVEST">
+                    </a>
                   </div>
                   <div class=uk-navbar-right>
                     <ul class=uk-navbar-nav>
@@ -78,9 +80,9 @@
               <div class="uk-margin-remove-top uk-margin-remove-bottom uk-grid-margin uk-margin-remove-top uk-margin-remove-bottom" uk-grid>
                 <div class=uk-width-1-1@m>
                   <h1 class="uk-margin-remove-top uk-margin-remove-bottom uk-width-large uk-text-center" uk-scrollspy-class><h1 style="text-align: left;"><span style="font-size: 36pt;">&nbsp; &nbsp; 739-202-440</span><br /><br />Malowanie wnętrz Poznań<br />Kompleksowe remonty<br />Budowa domów<br /><br /></h1> <span style="font-size: 36pt; color: #666666;"><br /></span> </h1>
-                  <div class="uk-margin uk-margin-remove-top uk-margin-remove-bottom uk-width-large" uk-scrollspy-class=uk-animation-slide-left-small>
+                  <div class="uk-margin uk-margin-remove-top uk-margin-remove-bottom uk-width-xlarge" uk-scrollspy-class=uk-animation-slide-left-small>
                     <div class="uk-flex-middle uk-child-width-auto uk-grid-medium" uk-grid>
-                      <div class=el-item> <a class="el-content uk-button uk-button-danger uk-button-large header-button" href=https://malujemypoznan.com.pl/kontakt> Darmowa wycena </a> </div>
+                      <div class=el-item> <a class="el-content uk-button uk-button-danger uk-button-large header-button uk-box-shadow-small" href=https://malujemypoznan.com.pl/kontakt> Darmowa wycena </a> </div>
                       <div class=el-item> <a class="el-content uk-button uk-button-text uk-button-large" href=https://malujemypoznan.com.pl/oferta> Nasza Oferta </a> </div>
                     </div>
                   </div>
@@ -253,7 +255,7 @@
         </div>
         <!-- End of the contact section -->
         <!-- Footer -->
-        <div class="tm-footer uk-section-primary uk-section" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-left-small&quot;,&quot;delay&quot;:false}>
+        <div class="tm-footer uk-section-secondary uk-section" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-left-small&quot;,&quot;delay&quot;:false}>
           <div class=uk-container>
             <div class=uk-grid-margin uk-grid>
               <div class="uk-width-expand@m uk-grid-item-match uk-flex-middle">
